# viewer

./: CMakeLists.txt  README.md
src/: Dialog.h  Main.cpp  MainWindow.cpp  MainWindow.h  VideoArea.cpp  VideoArea.h  VideoPlayer.cpp  VideoPlayer.h
styles/: Style.qss
